Added FB Message

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeI_LxQJkSBU1X6w8AAqtg1NroPe2ofHY" type="text/javascript"></script> -->
+  <script type='text/javascript' src='https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js'></script>
 </head>
 <body color='primary'>
   <app-root></app-root>
